# hyperspeed-e2e-canary-python

./: .gitignore  EXPECTED.md  README.md  conftest.py  pyproject.toml
.github/workflows/: session-tests.yml
app/: __init__.py  main.py
specs/: Architecture - Canary Notes.md  UX Design - Canary Notes.md  User Stories - Canary Notes.md
tests/integration/: test_add_and_read.py  test_models_store.py  test_notes_routes.py  test_smoke.py  test_status_route.py
tests/unit/: test_store.py
