[tool.poetry]
name = "hyperspeed-canary-notes"
version = "0.0.1"
description = "Canary Poetry project for HyperSpeed Track D python end-to-end runner validation. Tiny notes API used as a fixture target for run-canary.mjs --fixture python."
authors = ["HyperSpeed Canary <canary@hyperspeed.local>"]
license = "MIT"
package-mode = true
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
